cmake_minimum_required(VERSION 3.25)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(leetcode
        main.cpp
        Tree/94.h
        Tree/144.h
        Tree/145.h
        Tree/100.h
        Tree/101.h
        Tree/104.h
        Tree/110.h
        Tree/111.h
        Tree/257.h
        Tree/112.h
        Tree/226.h
        Tree/404.h
        Tree/102.h
        Tree/108.h
        Tree/199.h
        stack/20.h
        math/66.h
        Tree/98.h
        Tree/543.h
        List/24.h
        List/83.h
        List/141.h
        List/203.h
        List/160.h
        array/605.h
        List/206.h
        dp/121.h
        List/237.h
        List/234.h
        List/2.h
        List/876.h
        Tree/107.h
        List/61.h
        Tree/103.h
        List/19.h
        List/82.h
        List/86.h
        List/92.h
        List/328.h
        Tree/116.h
        Tree/117.h
        List/1290.h
        Tree/114.h
        List/142.h
        List/143.h
        stack/150.h
        stack/155.h
        stack/225.h
        stack/232.h
        Tree/105.h
        Tree/559.h
        Tree/106.h
        math/2652.h
        Heap/2530.h
        Tree/96.h
        array/1480.h
        Tree/95.h
        math/2525.h
        stack/445.h
        Graph/2316.h
        dp/62.h
        array/118.h
        array/2903.h
        Tree/129.h
        string/2678.h
        292.h
        Tree/113.h
        math/2520.h
        Graph/1971.h
        Heap/2558.h
        competition/231029/231029_01.h
        competition/231029/231029_02.h
        stack/224.h
        stack/227.h
        Heap/215.h
        Tree/1382.h
        Tree/173.h
        queue/622.h
        queue/641.h
        stack/331.h
        stack/341.h
        stack/385.h
        Hash/705.h
        Hash/706.h
        string/709.h
        Graph/133.h
        stack/394.h
        string/2586.h
        Graph/1584.h
        string/2609.h
        Heap/347.h
        Heap/703.h
        array/26.h
        competition/231111/231111_01.h
        competition/231111/231111_02.h
        competition/231111/2311111_04.h
        competition/231112/231112_01.h
        competition/231112/231112_02.h
        competition/231112/231112_03.h
        array/307.h
        array/88.h
        Graph/1334.h
        array/2656.h
        Graph/207.h
        Graph/210.h
        array/2760.h
        array/303.h
        List/147.h
        array/15.h
        Disjoint_set/547.h
        string/657.h
        Graph/743.h
        Hash/146.h
        string/67.h
        string/89.h
        List/430.h
        Tree/235.h
        Tree/236.h
        array/2824.h
        Disjoint_set/128.h
        competition/231125/231125_01.h
        Tree/1457.h
        array/119.h
        competition/231126/231126_01.h
        competition/231126/231126_02.h
        Tree/429.h
        queue/1670.h
        array/2336.h
        array/78.h
        List/138.h
        array/2661.h
        array/1094.h
        array/1423.h
        array/933.h
        Tree/1038.h
        Graph/797.h
        Graph/1466.h
        string/14.h
        string/17.h
        Tree/589.h
        competition/231210/231210_01.h
        competition/231210/231210_02.h
        competition/231210/231210_03.h
        Graph/1631.h
        Tree/590.h
        array/11.h
        array/349.h
        string/2697.h
        List/23.h
        string/344.h
        Tree/2415.h
        Disjoint_set/200.h
        array/27.h
        array/27.h
        array/164.h
        array/75.h
        array/239.h
        array/73.h
        array/849.h
        string/2828.h
        Graph/51.h
        Graph/52.h
        array/2866.h
        Tree/109.h
        array/59.h
        Heap/1962.h
        string/8.h
        math/1276.h
        Tree/654.h
        array/2660.h
        Tree/230.h
        array/2706.h
        math/1185.h
        math/1154.h
        array/1599.h
        Tree/450.h
        string/28.h
        array/912.h
        List/2487.h
        Tree/99.h
        bit_operation/136.h
        List/2807.h
        string/383.h
        Graph/447.h
        array/56.h
        string/2696.h
        array/240.h
        string/2645.h
        string/2085.h
        string/2182.h
        array/167.h
        Tree/701.h
        Tree/530.h
        Tree/783.h
        Tree/297.h
        Tree/515.h
        string/2744.h
        stack/496.h
        stack/503.h
        math/7.h
        competition/240120/240120_01.h
        multithreading/1114.h
        math/69.h
        dp/70.h
        dp/338.h
        dp/1137.h
        dp/509.h
        dp/746.h
        dp/392.h
        dp/63.h
        dp/5.h
        dp/64.h
        dp/3218.h
        dp/55.h
        dp/22.h
        string/3083.h
        dp/45.h
        dp/53.h
        dp/72.h
        dp/120.h
        dp/931.h
        dp/1289.h
        dp/198.h
        array/3159.h
        dp/740.h
        dp/221.h
        array/3046.h
        dp/139.h
        dp/1143.h
        dp/300.h
        dp/516.h
        dp/1035.h
        Heap/1366.h
        math/50.h
        dp/322.h
        homework_13_11.h
        hw_13_17.h
        dp/518.h
        Tree/1367.h
        dp/712.h
        dp/646.h
        backtrace/39.h
        backtrace/77.h
        backtrace/78.h
        dp/1218.h
        math/231.h
        math/233.h
        math/326.h
        math/2269.h
        Hash/2610.h
        array/2829.h
        multithreading/1114_2.h
        multithreading/1115.h
        multithreading/1115_2.h
        multithreading/1116.h
        multithreading/1116_2.h
)
